--- a/introduction.tex
+++ b/introduction.tex
@@ -1,5 +1,19 @@
 \section{Introduction} \label{sec:intro}
-This is in the file intro.tex. Put your text here.
+
+The current situation is  that 
+\begin{itemize}
+\item Stable releases every 6 months 
+\item Weekly 
+\item nightly 
+\end{itemize}
+
+
+\subsection{Requirements from the community }
+
+To be able to update to stable bugfix releases in a timely manner 
+To be able to move to verions with new finctionality in a time;y manner. 
+To do this in a stable manner (not breaking API changes, schema changes, 
+	
 
 The appendices for the \appref{sec:bib} and \appref{sec:acronyms} are defined in the main file LDM-672.tex.
 
