--- a/process.tex
+++ b/process.tex
@@ -1,3 +1,42 @@
 \section{Process} \label{sec:process}
 
-Gabriele - this is where you add the proposed process
+The release process will be as follows:
+
+\begin{itemize}
+\item Major and minor releases will be planned and aproved by the DM-CCB well in advance. 
+\begin{itemize}
+  \item It is recommended that the DM-CCB provide on a yearly base a release plan with tentative release dates and contents.
+\end{itemize}
+\item all releases sould be clearly identified in Jira using the Jira functionality. If this is not available, a {\it Release Issue} ca be created (by the CRM) and the issues that are blocking the release, shall be related as blocker to the Release Issue. 
+\item Any extra releses, major, minor or patch, need to be requested by the release end users to the DM-CCB via RFC. The RFC shall contain:
+\begin{itemize}
+  \item the reason an extra release
+  \item the the list of features or fixes that need to be implemented in the release
+  \item when the release should be available, and specify if it is urgent or not.
+\end{itemize}
+\item The DM-CCB will assess the release request, involving the relevant T/CAMs and tecnical contributor affected. 
+The DM-CCB shall provide mechanisms to approve a relese depending on the urgency. 
+Urgent releases coul be aproved in 24 hours, non urgent releases can be approved in one week time.
+\item The release request may be approved or rejectd.
+\item In case of approval, the following informatino will be provided back:
+\begin{itemize}
+  \item The version identification of the release
+  \item an estimatimation when the release will be available
+  \item confirm the content of the release
+\end{itemize}
+\item the DM-CCB will monitor that the release will be ready on time and comunicate changes in the release date
+\end{itemize}
+
+
+The DM-CCB is suppose to meet every week.
+
+Thecnical aspects and roles (who does what) shall be addressed as follows:
+
+\begin{itemize}
+\item {\bf regular development}: in the \href{https://developer.lsst.io/}{developer guide}
+\item {\bf fix porting}: in the \href{https://developer.lsst.io/}{developer guide}
+\item {\bf documentation}: in the \href{https://developer.lsst.io/}{develiper giuids} or a different document
+\item {\bf release engineering}: in a general release document (to be writte). At the time been \href{https://sqr-016.lsst.io/}{SQR-016} will be used for the science pipelines release.
+\end{itemize}
+
+
