--- a/process.tex
+++ b/process.tex
@@ -5,46 +5,47 @@
 The release process will be as follows:
 
 \begin{itemize}
-\item Major and minor releases will be planned and approved by the DM-CCB well in advance. 
+\item Major and minor releases will be planned and approved by the DM-CCB. 
 \begin{itemize}
-  \item It is recommended that the DM-CCB provide on a yearly base a release plan with tentative release dates and contents.
-  \item The DM-CCB shall monitor and eventually approve the content of each release. This will be done ensuring that all RFC that impacts a release content are approved by the DM-CCB.
+  \item It is recommended that the DM-CCB provide on a yearly base a release plan with a tentative schedule and release content.
+  \item The DM-CCB will monitor and approve or reject the content of each release. This will be done ensuring that all RFC that impacts a release content are approved by the DM-CCB.
 \end{itemize}
-\item all releases should be clearly identified in Jira using the Jira functionality. If this is not available, a {\it Release Issue} ca be created (by the CRM) and the issues that are blocking the release, shall be related as blocker to the Release Issue. 
-\item Any extra releases, major, minor or patch, need to be requested by the release end users to the DM-CCB via RFC. The RFC shall contain:
+\item All releases will be clearly identified in Jira using the Jira functionality. 
+If this is not available, a {\it Release Issue} will be created and all issues that are blocking the release will be related as blocker to it. 
+\item Any extra releases, major, minor or patch, has to be requested by the release end users to the DM-CCB via RFC. The RFC shall contain:
 \begin{itemize}
-  \item the reason an extra release
-  \item the the list of features or fixes that need to be implemented in the release
-  \item when the release should be available, and specify if it is urgent or not.
+  \item reason an extra release
+  \item list of features or fixes which are quested to be implemented in the release
+  \item date the release is requested to be available and specify the urgency.
 \end{itemize}
-\item The DM-CCB will assess the release request, involving the relevant T/CAMs and technical contributor affected. 
-The DM-CCB shall provide mechanisms to approve a release depending on the urgency. 
-Urgent releases could be approved in 24 hours, non urgent releases can be approved in one week time.
+\item The DM-CCB will assess the release request involving the relevant T/CAMs and technical contributor affected. 
+Urgent release request will be approved in 24 hours, non urgent release requests will be approved in one week's time.
 \item The release request may be approved or rejected.
-\item In case of approval, the following information will be provided back:
+\item In case of approval, the following information will be added to a comment in the RFC:
 \begin{itemize}
-  \item The version identification of the release
-  \item an estimation when the release will be available
-  \item confirm the content of the release
+  \item version identification of the release
+  \item date the release will be available (an estimation, that may change)
+  \item confirm content of the release
 \end{itemize}
-\item the DM-CCB will monitor that the release will be ready on time and communicate changes in the release date
+\item the DM-CCB will monitor the progress of the release's activity and communicate changes in the release date
 \end{itemize}
 
 
-The DM-CCB is suppose to meet every week.
+The DM-CCB will meet every week.
 
-Technical aspects and roles (who does what) shall be addressed as follows:
+Technical aspects and roles (who does what) are addressed int following documents:
 
 \begin{itemize}
 \item {\bf regular development}: in the \href{https://developer.lsst.io/}{developer guide}
 \item {\bf fix porting}: in the \href{https://developer.lsst.io/}{developer guide}
-\item {\bf documentation}: in the \href{https://developer.lsst.io/}{developer guide} or a different document
-\item {\bf release engineering}: in a general release document (to be written). At the time been \href{https://sqr-016.lsst.io/}{SQR-016} will be used for the science pipelines release.
+\item {\bf release documentation}: in the \href{https://developer.lsst.io/}{developer guide} or a different document
+\item {\bf release engineering}: in the {\it Release procedure} technical note (to be written). At the time been \href{https://sqr-016.lsst.io/}{SQR-016} will be used for the science pipelines release.
 \end{itemize}
 
 \subsection{Release Timing}
 
-The time needed to have a release available is due to different factors:
+Preparing a release is a compless process.
+The time needed to complete it depends on many factors:
 
 \begin{itemize}
 \item assessment and development time
@@ -53,16 +54,18 @@ The time needed to have a release available is due to different factors:
 \item CCB process time
 \end{itemize}
 
-Defining a clear process as done here, will help reduce to the minimum the communication delays and CCB process time.
+This list is not complete. Other unespected factors may enter in the loop.
 
-Technical timing needed to assess and develop the solution, may be very difficult to reduce.
+Defining a clear process, as done in this document, will help to reduce to the minimum the communication delays and CCB process time.
 
-Build time, CI time and validation instead are depending from the infrastructure and tooling used. 
-It is requested to the DM-CCB to evaluate technical solutions in order to reduce build, CI and validation required time.
+Technical time, needed to assess and develop the solution, may be very difficult to reduce.
+
+Build, CI and validation time are depending from the infrastructure, architecture and tooling used. 
 
 \subsection{Urgent Releases}
 
-In the case a very urgent release is required, that can't wait a formal approval of the DM-CCB (24 hours), a quick decision can be taken by the DMPM and a requested fix can be implemented and release immediatelly.
+In the case a very urgent release is required, that can't wait a formal approval of the DM-CCB (24 hours), 
+a quick decision can be taken by the DMPM and a requested fix can be implemented and released immediatelly, if feaseble.
 
-However, a RFC need to be filed, even if a posteriori, and the DM-CCB is required to assess it.
+However, a RFC need to be filed, a posteriori, and the DM-CCB is required to assess it.
 
