--- a/process.tex
+++ b/process.tex
@@ -39,8 +39,9 @@ Technical aspects and roles (who does what) are addressed int following document
 \item {\bf regular development}: in the \href{https://developer.lsst.io/}{developer guide}
 \item {\bf fix porting}: in the \href{https://developer.lsst.io/}{developer guide}
 \item {\bf release documentation}: in the \href{https://developer.lsst.io/}{developer guide} or a different document
-\item {\bf release engineering}: in the {\it Release procedure} technical note (to be written). At the time been \href{https://sqr-016.lsst.io/}{SQR-016} will be used for the science pipelines release.
+\item {\bf release engineering}: in the DMTN-106 (still draft). \href{https://sqr-016.lsst.io/}{SQR-016} is used for the science pipelines release.
 \end{itemize}
+
 
 \subsection{Release Timing}
 
@@ -61,6 +62,7 @@ Defining a clear process, as done in this document, will help to reduce to the m
 Technical time, needed to assess and develop the solution, may be very difficult to reduce.
 
 Build, CI and validation time are depending from the infrastructure, architecture and tooling used. 
+
 
 \subsection{Urgent Releases}
 
