--- a/requirements.tex
+++ b/requirements.tex
@@ -1,3 +1,70 @@
+\section{Requirements} \label{sec:reqs}
+
+Software producted in LSST Data Management has different stakeholders, that may have different requirements in terms of release.
+In this section we try to give an overview of the release requirements for each of them.
+
+
+\subsection{Requirements from the community } \label{sec:comreqs}
+
+To be able to update to stable bugfix releases in a timely manner
+To be able to move to verions with new finctionality in a time;y manner.
+To do this in a stable manner (not breaking API changes, schema changes,
+
+\textit{ I would suggest that the science community do not require official releases, but stable distributions.
+In this way, it will be much easier to make available new distributions that include expected fixes, 
+but do not require formal releses.
+To note also, that what the science community is more interested is the availability of the Science Pipelines,
+that in reality is not a SW produce but a distribution, that includes many more object.  }
+
+The appendices for the \appref{sec:bib} and \appref{sec:acronyms} are defined in the main file LDM-672.tex.
+
+The main bibliography file is in the lsst-texmf/texmf/bibtex/bib so you can refer 
+to documents such as \citeds{LDM-294} (from lsst.bib)  or papers like \cite{2008arXiv0805.2366I} (from refs\_ads.bib). You may make a PR to add new refs to these files.
+
+Acronyms like BOE and BAC will be picked up by generateAcronyms.py which is in lsst-texmf/bin -- that needs to be in the PATH.
+
+
+\subsection{Processing Release Requirements} \label{sec:procreqs}
+
+NCSA is in charge to host and operate the data processing.
+
+DM developed software released for NCSA processing will depend on the specific processing need.
+
+Release frequencies depends on the processing type:
+
+\begin{itemize}
+\item prompt processing has to answer quickly to request for changes, that can happen on a daily bases (official releases)
+ or more frequent patch release in case of problems.
+\item DRP processing may have a more relaxed schedule, for example on yearly, and can ben rehearsed before running the formal processing.
+\end{itemize}
+
+\textit{In order to properly set-up the release process, the SW products to operate need to be identified}
+
+Patch releases need to be provided with a frequency that depends on the type of processing
+and on the ugency of the problems to be fixed.
+
+
+\subsection{Infrastructure Release Requirements} \label{sec:infreqs}
+
+A subset of DM software products will not be used for data processing,
+nor will be available to the community for further investigation and contribution to the LSST science.
+One example if the software required to implement the LSP.
+
+The releases in this cases are oriented to have a stable infrstructure.
+The release candence is n prionciple not tight to processing milestones,
+except in case of new functionality to be provided in a planned mmaner.
+
+Pach releases need to be proveded depending on the severity of the problems to be fixed.
+
+
+\subsection{Other Release Requiremtns} \label{other:reqs}
+
+Other LSST subsystem may be consumers of DM software products.
+
+In order for DM to be able to answer correctly to requests for changes, 
+it is important to identify the DM Software Products used operationally by other subsystems.
+
+\newpage
 \section{General Considerations} \label{sec:considerations}
 
 The section outlines needs and usage of the LSST science community that drive the definition of the processes 
