--- a/definitions.tex
+++ b/definitions.tex
@@ -1,6 +1,6 @@
 \section{Definitions} \label{sec:defs}
 
-The following definitions need to be taken in account.
+The following definitions have to be taken in account when defining or working with the release process.
 
 
 \subsection{Environment} \label{sec:envdef}
@@ -103,6 +103,6 @@ Distributions may also include non binary packages, build tools, test data or so
 
 Depending on the purpose, the packages included in a distribution may not correspond to a specific software release. 
 For example for test purposes, a release candidate can be used instead or, during commissioning, 
-it may be necessary to deploy packages on the fly a package including changes just made in the repository,
-identified by the corresponding revision.
+it may be necessary to deploy on the fly a package including changes just made in the repository
+and identified only by the corresponding revision.
 
