--- a/introduction.tex
+++ b/introduction.tex
@@ -9,6 +9,6 @@ The current situation is  that
 
 The current release process requires few weeks to made an official release available.
 
-For this reasons weekly builds are largerly used, since they provide to most up to date stable software.
+For this reasons weekly builds are largerly used, since they provide the most up to date and stable software.
 
 
