--- a/process.tex
+++ b/process.tex
@@ -69,5 +69,5 @@ Build, CI and validation time are depending from the infrastructure, architectur
 In the case a very urgent release is required, that can't wait a formal approval of the DM-CCB (24 hours), 
 a quick decision can be taken by the DMPM and a requested fix can be implemented and released immediatelly, if feaseble.
 
-However, a RFC has to be filed, a posteriori, and the DM-CCB is required to assess it.
+However, an RFC has to be filed a posteriori, and the DM-CCB is required to assess it.
 
