--- a/definitions.tex
+++ b/definitions.tex
@@ -35,7 +35,7 @@ The following activities are done on a SW Product:
 
 A Software Product shall correspond to a single repository.
 In other  words, there shall be a correspondence \textit{1:1} between Software Products and git packages.
-All the Software Product's dependences are different Software Products and therefore released separately.
+All the Software Product's dependencies are different Software Products and therefore released separately.
 
 This is not the case of DM, where a Software Product is comprised of multiple git packages.
 The compromised solution in this case is to have a GitHub \textit{metapackage} that identifies the Software Product.
