--- a/introduction.tex
+++ b/introduction.tex
@@ -9,6 +9,6 @@ The current situation is  that
 
 The current release process requires few weeks to make an official release available.
 
-For this reasons weekly builds are largerly used, since they provide the most up to date and stable software.
+For this reasons weekly builds are largely used, since they provide the most up to date and stable software.
 
 
