--- a/process.tex
+++ b/process.tex
@@ -7,7 +7,7 @@ The release process will be as follows:
 \begin{itemize}
 \item Major and minor releases will be planned and approved by the DM-CCB.
 \begin{itemize}
-  \item  DM-CCB will provide  a release plan identifying  milestones requireiung software releases.
+  \item  DM-CCB will provide  a release plan identifying  milestones requiring software releases.
   \item The DM-CCB will monitor and approve or reject the content of each release. DM-CCB will ensure that  all RFCs that impact  release content are properly escalated.
 \end{itemize}
 %\item All releases will be clearly identified in Jira using the Jira \textbf{Fix In Version(s)} field.
@@ -21,7 +21,7 @@ If this is not available, a \textit{Release Issue} will be created and all issue
 \item The DM-CCB will assess the release request involving the relevant T/CAMs and technical contributor affected.
 Urgent release request will be approved in 24 hours, non urgent release requests will be approved in one week's time.
 \item The release request may be approved or rejected.
-\item In case of approval, the following information will be added in a comment ito the RFC:
+\item In case of approval, the following information will be added in a comment to the RFC:
 \begin{itemize}
   \item version identification of the release
   \item date the release will be available (an estimation, that may change)
@@ -45,7 +45,7 @@ Technical aspects and roles (who does what) are addressed int following document
 
 \subsection{Release Timing}
 
-Preparing a release is a compless process.
+Preparing a release is a complex process.
 The time needed to complete it depends on many factors:
 
 \begin{itemize}
@@ -55,7 +55,7 @@ The time needed to complete it depends on many factors:
 \item CCB process time
 \end{itemize}
 
-This list is not complete. Other unespected factors may enter in the loop.
+This list is not complete. Other unexpected factors may enter in the loop.
 
 Defining a clear process, as done in this document, will help to reduce to the minimum the communication delays and CCB process time.
 
@@ -67,7 +67,7 @@ Build, CI and validation time are depending from the infrastructure, architectur
 \subsection{Urgent Releases}
 
 In the case a very urgent release is required, that can't wait a formal approval of the DM-CCB (24 hours),
-a quick decision can be taken by the DMPM and a requested fix can be implemented and released immediatelly, if feaseble.
+a quick decision can be taken by the DMPM and a requested fix can be implemented and released immediately, if feasible.
 
 However, an RFC has to be filed a posteriori, and the DM-CCB is required to assess it.
 
