--- a/requirements.tex
+++ b/requirements.tex
@@ -1,18 +1,18 @@
 \section{Requirements} \label{sec:reqs}
 
-Software producted in LSST Data Management has different stakeholders, that may have different requirements in terms of release.
+Software products in LSST Data Management has different stakeholders, that may have different requirements in terms of release.
 In this section we try to give an overview of the release requirements for each of them.
 
 
 \subsection{Requirements from the community } \label{sec:comreqs}
 
 To be able to update to stable bugfix releases in a timely manner
-To be able to move to verions with new finctionality in a time;y manner.
+To be able to move to versions with new functionality in a time;y manner.
 To do this in a stable manner (not breaking API changes, schema changes,
 
 \textit{ I would suggest that the science community do not require official releases, but stable distributions.
 In this way, it will be much easier to make available new distributions that include expected fixes,
-but do not require formal releses.
+but do not require formal releases.
 To note also, that what the science community is more interested is the availability of the Science Pipelines,
 that in reality is not a SW produce but a distribution, that includes many more object.  }
 
@@ -33,7 +33,7 @@ Release frequencies depend on the processing type:
 \textit{In order to properly set-up the release process, the SW products to operate need to be identified}
 
 Patch releases need to be provided with a frequency that depends on the type of processing
-and on the ugency of the problems to be fixed.
+and on the urgency of the problems to be fixed.
 
 
 \subsection{Infrastructure Release Requirements} \label{sec:infreqs}
@@ -42,11 +42,11 @@ A subset of DM software products will not be used for data processing,
 nor will be available to the community for further investigation and contribution to the LSST science.
 One example if the software required to implement the LSP.
 
-The releases in this cases are oriented to have a stable infrstructure.
-The release candence is n prionciple not tight to processing milestones,
-except in case of new functionality to be provided in a planned mmaner.
+The releases in this cases are oriented to have a stable infrastructure.
+The release cadence is n principle not tight to processing milestones,
+except in case of new functionality to be provided in a planned manner.
 
-Pach releases need to be proveded depending on the severity of the problems to be fixed.
+Pach releases need to be provided depending on the severity of the problems to be fixed.
 
 
 
